# faddnsd

./: .gitignore  Cargo.toml  Dockerfile  Justfile  Pipfile  README.md  build.rs  cfg.py  compile.bat  faddns.py  faddns_update_zone  faddnsc  faddnsc.bat  faddnsc.ini  faddnsc.service  faddnsc_gui  faddnsc_gui.bat  faddnsc_gui.py  faddnsd  faddnsd.py  install_service.bat  nsupdate  nsupdate-zone.py  nsupdate.bat  nsupdate.ini  nsupdate.py  nsupdate.service  nsupdate_tray.py  requirements.txt  server.py  setup.py  setup_win.py  tailwind.config.js  tray.py  update_zone.py  version.py
arch/: PKGBUILD
etc/: faddnsc.service  faddnsd.service
faddns/: __init__.py  cfg.py
src/: lib.rs  main.rs  web.rs
static/: output.css
test_data/: cz.podgorny.zone  cz.podgorny_faddns.zone
tests/: integration_tests.rs
windows/: atxpkg_backup  compile.bat  faddnsc.ini  install_service.bat  remove_service.bat  setup.py
