[package]
name = "faddns_rust"
version = "0.1.0" # This will be mostly for local use, actual version comes from build.rs
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] } # Required by Axum 0.7 for axum::serve
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
thiserror = "1"
ipnetwork = "0.20" # For more robust IP checks, though std::net::IpAddr is good
axum-extra = { version = "=0.9.3", features = ["typed-header", "typed-header-x-forwarded-for"] }

[build-dependencies]
# No specific build-time dependencies needed for just reading a file,
# but if we were using a code generator or similar, they'd go here.
# For this task, std library in build.rs is sufficient.

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
