[package]
name = "faddnsd"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "TODO"
authors = ["Radek Podgorny <radek@podgorny.cz>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] } # Required by Axum 0.7 for axum::serve
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
thiserror = "1"
ipnetwork = "0.20" # For more robust IP checks, though std::net::IpAddr is good
axum-extra = "=0.9.3"
urlencoding = "2.1"

[profile.release.package."*"]
debug = false

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = true
